--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 UNAME := $(shell uname)
 ifeq ($(UNAME), Linux)
-	DEBUG = -g -rdynamic -ggdb 
+	DEBUG = -g -rdynamic -ggdb -DDEBUG
 else
 	DEBUG =	-g -ggdb 
 endif
@@ -8,16 +8,21 @@ endif
 CC = gcc
 CFLAGS =  -c -std=c99 -Wall $(DEBUG)	
 
-LIB_OBJS = \
+LIB_OBJS =     \
 	./index.o  \
 	./log.o	   \
+	./debug.o  \
+	./merge.o  \
+	./stable.o \
 	./skiplist.o
 
-TEST_OBJS = \
-	./test_skiplist.o
+TEST_OBJS =\
+	./test_skiplist.o \
+	./test_index.o
 
 TESTS = \
-	./test_skiplist 
+	./test_skiplist \
+	./test_index
 
 LIBRARY = liblsmtree.a
 
@@ -28,10 +33,14 @@ clean:
 	-rm -f $(LIB_OBJS)
 	-rm -f $(TEST_OBJS)
 	-rm -f $(TESTS)
+	-rm -f *.log
 
 $(LIBRARY): $(LIB_OBJS)
 	rm -f $@
 	$(AR) -rs $@ $(LIB_OBJS)
 
-test_skiplist: ./test_skiplist.o $(TEST_OBJS) $(LIB_OBJS)
-	$(CC)  ./test_skiplist.o $(SVR_OBJS) $(LIB_OBJS) -o $@
+test_skiplist: ./test_skiplist.o  $(TEST_OBJS) $(LIB_OBJS)
+	$(CC)	./test_skiplist.o $(SVR_OBJS) $(LIB_OBJS) -o $@
+
+test_index: ./test_index.o $(TEST_OBJS) $(LIB_OBJS)
+	$(CC) 	 ./test_index.o $(SVR_OBJS) $(LIB_OBJS) -o $@
